feat: allow override token location on pod
* add lombok
* update renovate and orb along with changes in repo itself